<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/no_pubkey_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/private_key_text"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <TextView
        android:id="@+id/no_pubkey_textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/no_private_key_help1"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/no_pubkey_textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/no_private_key_help2"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/no_pubkey_textview3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/no_private_key_help3"
        android:textAppearance="@android:style/TextAppearance.Material.Small" />

    <TextView
        android:id="@+id/no_pubkey_textview4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/no_private_key_help4"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />


</LinearLayout>
